# TS-seller-marketplace-django

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
mkt/: forms.py  models.py  urls.py  views.py
mkt/migrations/: 0001_initial.py  0002_configuration_apis.py
mkt/static/css/: main.css  style.css
mkt/templates/: add_configuration.html  add_mkt.html  base.html  conf_delete.html  configuration_list.html  mkt_delete.html  mkt_list.html  nav.html  update_config.html  update_mkt.html
seller_and_marketplace/: asgi.py  settings.py  urls.py  wsgi.py
sellers/: admin.py  forms.py  models.py  urls.py  views.py
sellers/migrations/: 0001_initial.py
sellers/templates/: base.html  create_seller.html  seller_address.html  sellers.html  update_seller.html
tests/: test_model_configuration.py
