[tool.poetry]
name = "ts-seller-marketplace-django"
version = "0.1.0"
description = ""
authors = ["Felipe Savaris <fesavaris@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"
python-decouple = "^3.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
